+ Название столбцов в таблице со списком перевозок (левая часть) перевести на русский язык.

--- a/app/templates/transactions.html
+++ b/app/templates/transactions.html
@@ -468,13 +468,13 @@
                                   <thead style="margin-left: auto;margin-right: auto;">
                                     <tr>
                                       <th scope="col">#</th>
-                                      <th scope="col">Date</th>
-                                      <th scope="col">Ledger</th>
-                                      <th scope="col">Status</th>
-                                      <th scope="col">Place of departure</th>
-                                      <th scope="col">Destination</th>
+                                      <th scope="col">Дата</th>
+                                      <th scope="col">Контейнер</th>
+                                      <th scope="col">Статус</th>
+                                      <th scope="col">Станция отправления</th>
+                                      <th scope="col">Назначение</th>
                                       {% if enable_parallel_txns %}
-                                        <th scope="col">Multi</th>
+                                        <th scope="col">Группа</th>
                                       {% endif %}
                                     </tr>
                                   </thead>
@@ -638,11 +638,11 @@
                                         <tr>
                                           <th scope="col"></th>
                                           <th scope="col">#</th>
-                                          <th scope="col">Date</th>
-                                          <th scope="col">Ledger</th>
-                                          <th scope="col">Status</th>
-                                          <th scope="col">Place of departure</th>
-                                          <th scope="col">Destination</th>
+                                          <th scope="col">Дата</th>
+                                          <th scope="col">Контейнер</th>
+                                          <th scope="col">Статус</th>
+                                          <th scope="col">Станция отправления</th>
+                                          <th scope="col">Назначение</th>
                                         </tr>
                                       </thead>
                                       <tbody style="font-size: 75%;">
